# scale-codec-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: HunterGate.cmake
cmake/Hunter/: config.cmake
docker/: ci.Dockerfile
include/scale/: bitvec.hpp  configurable.hpp  decoder.hpp  decoder_backend.hpp  definitions.hpp.in  encode.hpp  encode_append.hpp  encoder.hpp  encoder_backend.hpp  enum_traits.hpp  fn.fwd.hpp  fn.hpp  scale.hpp  scale_decoder_stream.hpp  scale_encoder_stream.hpp  scale_error.hpp  tie.hpp  tie.py  to_le.hpp  tune.hpp  types.hpp  unreachable.hpp  visitor.hpp
include/scale/backend/: for_count.hpp  from_bytes.hpp  to_bytes.hpp
include/scale/buffer/: buffer.hpp  buffer_back_insert_iterator.hpp  hexutil.hpp
include/scale/detail/: .gitignore  aggregate.hpp  aggregate.hpp.in  classic_compact_integer.hpp  compact_integer.hpp  custom_decomposing.hpp  decompose_and_apply.hpp.in  enum.hpp  fixed_width_integer.hpp  jam_compact_integer.hpp  optional.hpp  smart_pointers.hpp  variant.hpp
include/scale/outcome/: catch.hpp  outcome-register.hpp  outcome.hpp  outcome_throw.hpp
scripts/: generate_aggregate_hpp.sh  generate_decompose_and_apply_hpp.sh
src/: CMakeLists.txt  compact_len_utils.hpp  decoder.cpp  encode_append.cpp  encoder.cpp  scale_decoder_stream.cpp  scale_encoder_stream.cpp  scale_error.cpp
src/buffer/: CMakeLists.txt  buffer.cpp  hexutil.cpp
test/: CMakeLists.txt  append_test_data.hpp  scale_array_test.cpp  scale_boolean_test.cpp  scale_boost_variant_test.cpp  scale_collection_test.cpp  scale_compact_integer_test.cpp  scale_compact_test.cpp  scale_convenience_functions_test.cpp  scale_custom_decomposing_test.cpp  scale_decoder_stream_test.cpp  scale_decoder_test.cpp  scale_encode_append_test.cpp  scale_encode_counter_test.cpp  scale_enum_test.cpp  scale_fixed_integer_test.cpp  scale_fixed_test.cpp  scale_optional_test.cpp  scale_pair_test.cpp  scale_sptr_and_refs_test.cpp  scale_std_variant_test.cpp  scale_strings_test.cpp  scale_tune_test.cpp  scale_tuple_test.cpp  scale_variant_test.cpp
test/installation/: CMakeLists.txt  scale_test.cpp
test/util/: literals.hpp  outcome.hpp  scale.hpp
vcpkg-overlay/qtils/: portfile.cmake  vcpkg.json
